# gr-legacy_cudaops

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
bench/: bm_copy.py  bm_copy_file.py
cmake/Modules/: legacy_cudaopsConfig.cmake
docs/: CMakeLists.txt  README.legacy_cudaops
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/grc/: fft_demo.grc  fft_demo.py  fft_filter_demo.py  filter_demo.grc
grc/: CMakeLists.txt  legacy_cudaops_copy.block.yml  legacy_cudaops_cufft.block.yml  legacy_cudaops_fft_filter_ccf.block.yml
include/legacy_cudaops/: CMakeLists.txt  api.h  copy.h  cufft.h  fft_filter.h  fft_filter_ccf.h  memmodel.h
lib/: CMakeLists.txt  add.cu  copy.cu  copy_impl.cc  copy_impl.h  cufft_impl.cc  cufft_impl.h  fft_filter.cc  fft_filter_ccf_impl.cc  fft_filter_ccf_impl.h  multiply.cu  window.cu
python/: CMakeLists.txt  __init__.py  qa_copy.py  qa_cufft.py  qa_fft_filter_ccf.py
python/bindings/: CMakeLists.txt  copy_python.cc  cufft_python.cc  failed_conversions.txt  fft_filter_ccf_python.cc  memmodel_python.cc  python_bindings.cc
python/bindings/docstrings/: copy_pydoc_template.h  cufft_pydoc_template.h  fft_filter_ccf_pydoc_template.h  memmodel_pydoc_template.h
